--- a/R-Classic/r-classic-1.Rmd
+++ b/R-Classic/r-classic-1.Rmd
@@ -35,7 +35,14 @@ get_year <- function(target_year) {
     data <- data %>% slice(3:n())
     colnames(data) <- data[1, ]
     data <- data[-1, c(-1, -3, -4)] # 관련 없는 행, 열 제거
-    data <- data %>% mutate(year = target_year)
+    data <- data %>% mutate(year = target_year) %>% 
+      separate("행정기관", sep = " ", into = c("level1", "level2", "level3"))
+    
+    colnames(data) <- c("level1", "level2", "level3", paste0("Age", 0:100), "year")
+    
+    data <- data %>% mutate_all(function(t) str_replace(t, ",", "")) %>% 
+                  mutate_at(paste0("Age", 0:100), function(t) as.numeric(t))
+    
     
     final_data <- bind_rows(final_data, data)
     
@@ -66,9 +73,31 @@ data_2012_2022 <- merge_years(tibble(), 2012, 2022)
 data_2012_2022
 ```
 
-```{r}
-str_split("서울특별시 서울특별시 종로구", pattern = " ")[[1]]
 
-data_2012_2022 %>% separate("행정기관", sep = " ", into = c("level1", "level2", "level3"))
+
+```{r}
+DATA <- data_2012_2022
+data_2012_2022 <- data_2012_2022 %>% mutate_at(paste0("level", 1:3), function(t) as.character(t))
+```
+
+```{r}
+DATA1 <- DATA %>% filter(level1 == level2)
+DATA2 <- DATA %>% filter(level1 != level2)
+```
+
+```{r}
+DATA1
+```
+
+
+
+
+## Regression
+
+X: 전년도 0세 ~ 100세
+Y: 0세
+
+```{r}
+DATA_year_minus_1 <- DATA1
 ```
 
